# gmh_analysis

./: .gitignore  CHECKLIST.md  Dockerfile  README.md  app.py  docker-compose.yaml  main.py  pyproject.toml  test.md  test.py  ui.py
scripts/: benchmark.py  gaming_csv_to_db.py
src/: __init__.py  llm_client.py  pipeline.py  types.py
src/utils/: table_metadata_context.json
tests/: test_public.py
