[project]
name = "gmh-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "flask>=3.1.3",
  "loguru>=0.7.3",
  "openrouter>=0.8.1",
  "pandas>=3.0.2",
  "pydantic>=2.12.5",
  "python-dotenv>=1.2.2",
  "requests>=2.33.1",
]
